[package]
name = "i-wzu-auth"
version = "0.1.2"
edition = "2021"
authors = ["sorubedo"]
repository = "https://github.com/sorubedo/i-wzu-auth"
description = "🚀 温州大学 Srun 校园网无头 (Headless) 认证工具 (Rust)"
license = "MIT"

[dependencies]
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
url = "2.5"
hex = "0.4"
clap = { version = "4.6", features = ["derive", "env"] }
base64 = "0.22.1"
colored = "3.1.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
